@@ -12,7 +12,8 @@ VersionX.grid.Common.DetailGrid = function(config) {
         fields: [
             {name: 'fieldName', type: 'string'},
             {name: 'fieldValue', type: 'string'},
-            {name: 'fieldValueCmp', type: 'string'}
+            {name: 'fieldValueCmp', type: 'string'},
+            {name: 'different', type: 'bool'}
         ],
         columns: [
             {
@@ -25,7 +26,13 @@ VersionX.grid.Common.DetailGrid = function(config) {
                 header: _('versionx.resources.detail.grid.columns.field-value', {id:config.vxRecord.version_id}),
                 dataIndex: 'fieldValue',
                 sortable: true,
-                width: .375
+                width: .375,
+                renderer: function(value, meta, record) {
+                    if (record.data.different) {
+                        meta.css += ' vx-added';
+                    }
+                    return value;
+                }
             }
         ]
     });
@@ -37,16 +44,21 @@ VersionX.grid.Common.DetailGrid = function(config) {
         var length = config.vxFieldMap.length;
         for ( var i = 0; i < length; i++ ) {
             if (config.vxFieldMap[i].enumerate) {
+                var different = config.vxRecordCmp &&
+                    JSON.stringify(config.vxRecordCmp[config.vxFieldMap[i].key], null, 2) !== JSON.stringify(config.vxRecord[config.vxFieldMap[i].key], null, 2);
                 config.data.push([
                     _(config.vxFieldMap[i].lexicon),
                     '<pre>'+JSON.stringify(config.vxRecord[config.vxFieldMap[i].key], null, 2) + '</pre>',
-                    config.vxRecordCmp ? '<pre>'+JSON.stringify(config.vxRecordCmp[config.vxFieldMap[i].key], null, 2) + '</pre>' : ''
+                    config.vxRecordCmp ? '<pre>'+JSON.stringify(config.vxRecordCmp[config.vxFieldMap[i].key], null, 2) + '</pre>' : '',
+                    different
                 ]);
             } else {
+                var different = config.vxRecordCmp && config.vxRecord[config.vxFieldMap[i].key] !== config.vxRecordCmp[config.vxFieldMap[i].key];
                 config.data.push([
                     _(config.vxFieldMap[i].lexicon),
                     config.vxRecord[config.vxFieldMap[i].key],
-                    config.vxRecordCmp ? config.vxRecordCmp[config.vxFieldMap[i].key] : ''
+                    config.vxRecordCmp ? config.vxRecordCmp[config.vxFieldMap[i].key] : '',
+                    different
                 ]);
             }
         }
