@@ -4,6 +4,7 @@ This changelog shows an overview of what changed throughout VersionX releases, w
 - Refactor single index controller into separate controllers for each view
 - Use MODx.loadPage instead of window.location for opening links to allow middle click in 2.7
 - Cleanup of various legacy (VersionX.action, $versionx->getAction)
+- Highlight values that have changed in bold green
 
 ++++++++++++++++++++++++++++++++
 ++   VersionX 2.1.3-pl        ++
